# kube-rs-manager

./: Cargo.toml  Dockerfile  cloudbuild.yaml  config  deploy.yaml  output.txt  service.yaml
src/: main.rs  old1.rs
