[package]
name = "kube-rs"
version = "0.1.0"
authors = ["alexander <alex.gusain@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

kube = "*"
#kube-runtime = "*"
k8s-openapi = { version = "*", default-features = false, features = ["v1_19"] }

#futures = "*"

serde_json = "1.0"

serde = "1.0.124"

tokio = { version = "0.2.25", features = ["blocking", "time", "macros"] }

tungstenite = "0.13.0"

rocket = "0.4.7"

reqwest = { version = "0.11.2", features = ["blocking", "json"] }

rand = "*"