[package]
name = "kube-rs"
version = "0.1.0"
authors = ["alexander <alex.gusain@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

kube = "0.51.0"
#0.51.0 or * was the last working version

#kube-runtime = "*"
k8s-openapi = { version = "0.11.0", default-features = false, features = ["v1_19"] }

#futures = "*"

serde_json = "1.0"

serde = "1.0.124"

tokio = { version = "^1.0.1", features = [ "time", "macros"] }
#kube versison 0.51.0 also says on crates that it can rely on tokio version ^1.0.1, but my lock file says 0.2.25 

tungstenite = "0.13.0"

rocket = "0.4.7"

reqwest = { version = "0.11.2", features = ["blocking", "json"] }

rand = "*"