[package]
name = "kube-rs"
version = "0.1.0"
authors = ["alexander <alex.gusain@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

kube = { version = "0.59.0", default-features = false, features = ["client", "rustls-tls"] }
kube-runtime = { version = "0.59.0" }
k8s-openapi = { version = "0.13.0", default-features = false, features = ["v1_20"] }

tokio = { version = "1.0.1", features = ["full"] }


serde_json = "1.0"
serde = "1.0.124"

#futures = "*"

rocket = "*"

#reqwest = { version = "0.11.2", features = ["blocking", "json"] }

rand = "*"


[profile.dev]
#panic = "abort"

[profile.release]
#panic = "abort"